--- a/src/ts/components/SplashScreen/progress.module.scss
+++ b/src/ts/components/SplashScreen/progress.module.scss
@@ -7,8 +7,7 @@
 
   background-color: #404148;
 
-  &:after {
-    content: '';
+  &_line {
     font-size: 0.8em;
     display: block;
     width: 0;
@@ -33,11 +32,11 @@
 }
 
 .progress_bar,
-.progress_bar:after {
+.progress_bar_line {
   transition: background-color 0.7s, width 0.5s;
 }
 
-.progress_bar:after {
+.progress_bar_line {
   animation: progress_bar 4.3s linear forwards;
 }
 
