--- a/src/ts/components/TimeZoneMap/styles/index.module.scss
+++ b/src/ts/components/TimeZoneMap/styles/index.module.scss
@@ -81,4 +81,5 @@
   &_m1000 { top: 74%; left: 4%; }
   &_m1100 { top: 67%; left: 0; }
   &_m1200 { top: 62%; left: 97%; }
+  &_hide { display: none }
 }
