--- a/src/ts/components/BarChart/styles/index.module.scss
+++ b/src/ts/components/BarChart/styles/index.module.scss
@@ -14,6 +14,7 @@
   &_item {
     display: inline-block;
     width: 10px;
+    min-width: 1px;
 
     vertical-align: bottom;
     cursor: pointer;
