--- a/src/ts/components/UiKit/styles/wrapper.module.scss
+++ b/src/ts/components/UiKit/styles/wrapper.module.scss
@@ -1,5 +1,6 @@
 @import 'src/styles/variables';
 
+.ui_kit_select_with_buttons_wrapper + .ui_kit_wrapper,
 .ui_kit_wrapper + .ui_kit_wrapper {
   vertical-align: top;
   margin-top: var(--space-l);
