--- a/src/ts/pages/Team/components/Country/styles/index.module.scss
+++ b/src/ts/pages/Team/components/Country/styles/index.module.scss
@@ -13,6 +13,10 @@
   &_select {
     min-width: 350px;
   }
+
+  &_checkbox {
+    margin-top: var(--space-l);
+  }
 }
 
 @media (max-width: 900px) {
