--- a/src/ts/components/GameBanner/index.module.scss
+++ b/src/ts/components/GameBanner/index.module.scss
@@ -23,6 +23,7 @@
     width: 100%;
     padding: var(--space-xxl) var(--space-xxl) 0;
 
+    text-align: center;
     background-color: rgba(0, 0, 0, 0.7);
   }
 
