--- a/src/ts/components/UiKit/styles/button.module.scss
+++ b/src/ts/components/UiKit/styles/button.module.scss
@@ -35,7 +35,7 @@
 
 .ui_kit_button {
   font-weight: bold;
-  font-size: var(--font-xs);
+  font-size: 13px;
   display: inline-block;
   height: var(--temp-size);
   min-width: var(--temp-size);
