--- a/src/ts/components/Races/styles/info.module.scss
+++ b/src/ts/components/Races/styles/info.module.scss
@@ -25,12 +25,17 @@
   animation-fill-mode: both;
 }
 
-
 @keyframes races_track_info {
   from {
     opacity: 0;
   }
   to {
     opacity: 1;
+  }
+}
+
+@media (max-width: 900px) {
+  .races_track_info {
+    margin: 0 12%;
   }
 }
