--- a/src/ts/components/ModalWindow/styles/index.module.scss
+++ b/src/ts/components/ModalWindow/styles/index.module.scss
@@ -7,23 +7,27 @@
   box-sizing: border-box;
   box-shadow: 0 0 5px gray;
   background-color: var(--color-white);
-  border-radius: 8px;
+  border-radius: var(--border-radius-m);
 }
 
 .modal_window_fullscreen {
-  position: relative;
-  height: 100vh;
-  width: 100vh;
-  border-radius: 0;
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  max-height: 70vh;
+  width: 100vw;
+  max-width: 100vw;
+  border-radius: var(--border-radius-l) var(--border-radius-l) 0 0;
   animation: modal_window_fullscreen 0.2s ease-out forwards;
 }
 
 @keyframes modal_window_fullscreen {
   from {
-    right: 100%;
+    bottom: -70vh;
   }
   to {
-    right: 0;
+    bottom: 0;
   }
 }
 
@@ -73,7 +77,7 @@
   }
 
   &_body {
-    max-height: 60vh;
+    max-height: calc(60vh - 200px);
     padding: 0 24px;
     overflow: auto;
     line-height: 1.5;
@@ -104,6 +108,10 @@
       transform: rotate(180deg);
     }
   }
+}
+
+.modal_window_fullscreen .modal_window_close {
+  display: none;
 }
 
 @keyframes modal_window_halo {
