--- a/src/ts/components/Recommendations/styles/modal.module.scss
+++ b/src/ts/components/Recommendations/styles/modal.module.scss
@@ -68,3 +68,6 @@
   border-left-color: var(--color-temp-border);
 }
 
+.recommendations_modal.modal_window_fullscreen {
+  background-color: var(--color-white);
+}
