--- a/src/ts/components/Recommendations/styles/modal.module.scss
+++ b/src/ts/components/Recommendations/styles/modal.module.scss
@@ -59,6 +59,7 @@
 
   &_button {
     color: var(--color-temp-title);
+    background-color: var(--color-temp-bg);
     border-color: var(--color-temp-border);
   }
 
