--- a/src/ts/components/PieChart/index.module.scss
+++ b/src/ts/components/PieChart/index.module.scss
@@ -67,6 +67,7 @@
 
   &_text {
     max-width: calc(100% - 40px);
+    margin-left: var(--space-xs);
     text-overflow: ellipsis;
     overflow: hidden;
   }
