--- a/src/ts/pages/Team/components/Country/styles/index.module.scss
+++ b/src/ts/pages/Team/components/Country/styles/index.module.scss
@@ -21,7 +21,9 @@
 
 @media (max-width: 900px) {
   .team_country_filter_select {
+    display: block;
     min-width: 100%;
+    margin-bottom: var(--space-xxl)
   }
 }
 
