--- a/src/ts/components/Achievement/styles/index.module.scss
+++ b/src/ts/components/Achievement/styles/index.module.scss
@@ -88,3 +88,8 @@
   border-color: #FEC4C4;
 }
 
+.achievement_publicity {
+  background-color: var(--color-21);
+  border-color: var(--color-21);
+}
+
