--- a/src/ts/components/Description/index.module.scss
+++ b/src/ts/components/Description/index.module.scss
@@ -19,7 +19,7 @@
     text-decoration: none;
     vertical-align: bottom;
     white-space: normal;
-    color: #73809F;
+    color: var(--color-black);
   }
 
   &_title {
