--- a/src/ts/components/Extension/styles/index.module.scss
+++ b/src/ts/components/Extension/styles/index.module.scss
@@ -47,7 +47,7 @@
       vertical-align: top;
       white-space: normal;
 
-      color: var(--color-grey);
+      color: var(--color-black);
     }
 
     &_title {
