--- a/src/ts/components/Tempo/styles/chart.module.scss
+++ b/src/ts/components/Tempo/styles/chart.module.scss
@@ -37,6 +37,6 @@
     font-size: var(--font-xxs);
     display: inline-block;
     box-sizing: border-box;
-    color: var(--color-grey);
+    color: var(--color-black);
   }
 }
