--- a/src/ts/components/UiKit/styles/wrapper.module.scss
+++ b/src/ts/components/UiKit/styles/wrapper.module.scss
@@ -20,7 +20,7 @@
   line-height: 1.3;
   text-decoration: none;
   vertical-align: bottom;
-  color: var(--color-grey);
+  color: var(--color-black);
 }
 
 .ui_kit_title {
