--- a/src/ts/pages/PageWrapper/styles/filters.module.scss
+++ b/src/ts/pages/PageWrapper/styles/filters.module.scss
@@ -38,7 +38,7 @@
       text-decoration: underline;
       cursor: pointer;
       border: none;
-      color: var(--color-grey);
+      color: var(--color-black);
       background: none;
 
       &:hover {
