--- a/src/ts/components/Achievement/styles/index.module.scss
+++ b/src/ts/components/Achievement/styles/index.module.scss
@@ -72,10 +72,15 @@
   text-align: left;
 }
 
+.achievement_title {
+  font-size: var(--font-m);
+  font-weight: 400;
+}
+
 .achievement_description {
   display: block;
   padding: 4px 0 0 0;
-  color: var(--color-grey);
+  color: var(--color-black);
 }
 
 .achievement_good {
