--- a/src/ts/pages/Person/styles/print.module.scss
+++ b/src/ts/pages/Person/styles/print.module.scss
@@ -19,6 +19,6 @@
   border-radius: 8px;
   border: 1px solid var(--color-border);
   background-color: var(--color-white);
-  color: var(--color-grey);
+  color: var(--color-black);
 }
 
