--- a/src/ts/pages/Person/styles/index.module.scss
+++ b/src/ts/pages/Person/styles/index.module.scss
@@ -11,3 +11,10 @@
   margin: 0 12px;
 }
 
+.total_achievements_title {
+  font-size: var(--font-m);
+  font-weight: 100;
+  margin: 0 0 12px 0;
+  color: var(--color-black);
+}
+
